--- a/fecha1.html
+++ b/fecha1.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fechas importantes de nuestra relación</title>
+    <title>14 de Febrero, 2020</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Fechas importantes de nuestra relación </h1>
-        <div class="dates">
-            <a href="fecha1.html">7 de Mayo de 2024</a>
-            <a href="fecha2.html">6 de Junio de 2024</a>
-            <a href="fecha3.html">4 de Octubre de 2024</a>
-            
+        <h1>7 de Mayo de 2024</h1>
+        <div class="image-container">
+            <img src="IMG_3439.jpeg" alt="Foto especial" class="centered-image">
         </div>
+        <p>Este día fue muy especial, estuvimos juntos y compartimos momentos inolvidables bajo el cielo azul.</p>
+        <a href="parte2.html">Volver a las fechas</a>
     </div>
 </body>
 </html>
-
