--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div class="button-container">
         <h1>Banco de Recuerdos</h1>
-        <p>Por y para nosotros</p>
-        <button onclick="window.location.href='parte1.html'">Parte 1</button>
-        <button onclick="window.location.href='parte2.html'">Parte 2</button>
+        <p>Para que siempre puedas tener recuerdos en cualquier momento :)</p>
+        <button onclick="window.location.href='parte1.html'">Mi petición de novios</button>
+        <button onclick="window.location.href='parte2.html'">Fotos juntos</button>
         <button id="proximamente-btn">Próximamente</button>
     </div>
 
@@ -32,3 +32,5 @@
     </script>
 </body>
 </html>
+
+
