--- a/fecha1.html
+++ b/fecha1.html
@@ -10,11 +10,20 @@
 <body>
     <div class="container">
         <h1>7 de Mayo de 2024</h1>
-        <div class="image-container">
-            <img src="IMG_3439.jpeg" alt="Foto especial" class="centered-image">
+        <div class="content">
+            <div class="image-container">
+                <img src="IMG_3439.jpeg" alt="Foto especial" class="centered-image">
+            </div>
+            <div class="description">
+                <p>Aqui está una de las primeras fotos que me hice contigo, por que la primera la tienes tu y no te quería preguntar para no ser tan cantoso.
+                   No sabes la sensación de entusiasmo por conocer a una persona que me hiciste sentir de nuevo Marta. Recuerdo esos días que ibamos a la Cinta
+                   tan bonitos, tenías muchas ganas de conocer mi zona junto a mi y yo te llevaba y nos dabamos paseos por la Orden. He valorado siempre muchísimo el hecho de que 
+                   tu quisieses venir y estar conmigo por donde yo vivo y eso me llenaba de ilusión por dentro. Nunca había conocido una persona que se implicase así conmigo y sinceramente 
+                   cada vez fuiste cautivandome mucho más.</p>
+            </div>
         </div>
-        <p>Este día fue muy especial, estuvimos juntos y compartimos momentos inolvidables bajo el cielo azul.</p>
         <a href="parte2.html">Volver a las fechas</a>
     </div>
 </body>
 </html>
+
